--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "mdbreact": "^4.27.0",
+    "next": "^9.5.2",
+    "next-iron-session": "^4.1.8",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
